<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mgard.umpirebuddy.MainActivity"
    android:clickable="true"
    android:background="#000000">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/strike_count_value"
        android:text="@string/strike_count_value"
        android:layout_alignTop="@+id/strike_label"
        android:layout_toEndOf="@+id/strike_label"
        android:layout_marginStart="20dp"
        android:textSize="50sp"
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/ball_count_value"
        android:text="@string/ball_count_value"
        android:layout_alignTop="@+id/ball_label"
        android:layout_toEndOf="@+id/ball_label"
        android:layout_marginStart="20dp"
        android:textSize="50sp"
        android:textColor="#ffffff" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strike_button_label"
        android:id="@+id/strike_button"
        android:textSize="30sp"
        android:layout_above="@+id/ball_button"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ball_button_label"
        android:id="@+id/ball_button"
        android:textSize="30sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/ball_label"
        android:text="@string/ball_label"
        android:layout_marginTop="69dp"
        android:textSize="50sp"
        android:textColor="#ffffff"
        android:layout_below="@+id/strike_label"
        android:layout_toStartOf="@+id/strike_count_value" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:id="@+id/strike_label"
        android:text="@string/strike_label"
        android:layout_marginTop="79dp"
        android:textSize="50sp"
        android:textColor="#ffffff"
        android:layout_marginStart="46dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
